tests/type_errors/map_where_list_expected.nos
# expect_error: type mismatch
# Passing Map where List is expected should be a type error
myList(xs: List[Int]) = xs
main() = myList(%{1: "a"})
